# heifthumbnailer

./: CMakeLists.txt  README.md
cmake/Modules/: Findlibheif.cmake
src/: CMakeLists.txt  heif.xml  heifcreator.cpp  heifcreator.h  heifthumbnail.desktop
